listener/example-mtls/kcp/istio/istio-resources.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: kcp-gw
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway #! use istio default ingress gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      tls:
        httpsRedirect: true
      hosts:
        - "*.j2fmn4e1n7.jellyfish.shoot.canary.k8s-hana.ondemand.com"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: MUTUAL
        credentialName: kcp-tls
      hosts:
        - "*.j2fmn4e1n7.jellyfish.shoot.canary.k8s-hana.ondemand.com"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kcp-vs
  namespace: istio-system
spec:
  hosts:
    - "wat.j2fmn4e1n7.jellyfish.shoot.canary.k8s-hana.ondemand.com"
  gateways:
    - kcp-gw
  http:
    - match:
        - uri:
            prefix: /v1/http-bin
      rewrite:
        uri: /
      route:
        - destination:
            port:
              number: 8089
            host: kcp-watcher-service.watcher.svc.cluster.local
    - match:
        - uri:
            prefix: /v1/example-listener
      route:
        - destination:
            port:
              number: 8089
            host: example-listener.example-listener.svc.cluster.local
---

apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: "default"
  namespace: example-listener
spec:
  mtls:
    mode: STRICT

---

apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: "default"
  namespace: watcher
spec:
  mtls:
    mode: STRICT
